[tool.poetry]
name = "insta-board"
version = "0.1.0"
description = ""
authors = ["Maciej Janowski <maciej.janowski1@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
instagrapi = "^2.1.2"
pillow = "^10.4.0"
typer = "^0.12.3"
black = "^24.8.0"
isort = "^5.13.2"
colorama = "^0.4.6"
rich = "^13.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
